src/test/deca/context/valid/personalTests/cast.deca
{
    int a = 12;
    float b = 12.5;
    float c = a + b;
    println(c);
}