src/test/deca/context/invalid/personalTests/test1.deca

{
int a = 10;
void b = 20;
float c = a + b;
}